[gd_scene load_steps=8 format=3 uid="uid://iwkx24dsb5mq"]

[ext_resource type="Script" path="res://start_menu.gd" id="1_llhys"]
[ext_resource type="Texture2D" uid="uid://b4vf1a53dc046" path="res://TileMap.png" id="1_oq3p8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yymp2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ijw4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vwor1"]
bg_color = Color(0.988222, 0.145651, 0.644914, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fapdc"]
bg_color = Color(0.914447, 0.192539, 0.543186, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h7ceo"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_llhys")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_yymp2")

[node name="TileMap" type="Sprite2D" parent="."]
position = Vector2(-177, -35)
scale = Vector2(92.625, 43.2969)
texture = ExtResource("1_oq3p8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -321.0
offset_top = -193.0
offset_right = 321.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 6
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_7ijw4")
theme_override_styles/hover = SubResource("StyleBoxFlat_vwor1")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_fapdc")
theme_override_styles/normal = SubResource("StyleBoxFlat_h7ceo")
text = "start button"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 6
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_h7ceo")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_h7ceo")
theme_override_styles/normal = SubResource("StyleBoxFlat_h7ceo")
text = "level"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 6
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_h7ceo")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_h7ceo")
theme_override_styles/normal = SubResource("StyleBoxFlat_h7ceo")
text = "settings
"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 6
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_h7ceo")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_h7ceo")
theme_override_styles/normal = SubResource("StyleBoxFlat_h7ceo")
text = "Quit
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -265.0
offset_right = 265.0
offset_bottom = 140.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Welcome to Hell
"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_level_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_Quit_pressed"]
